static/styles.css
/* ... */
.nav-link {
    font-size: 1.8rem;
    padding: 6px;
    color: #fff;
    text-decoration: none;
    height: var(--nav-height);
    background-color: var(--nav-color);
    line-height: var(--nav-height);
    /* border-left: 1px solid #e26d5c; */
    transition: all .2s ease-in-out;
}
.nav-link:hover {
    cursor: pointer;
}
.nav-item:hover {
    /* transform: scale(1.1); */
    background-color: #e26d5c;
}
.nav-item:hover .nav-link {
    /* transform: scale(1.1); */
    background-color: #e26d5c;
}
.toggle-icon:hover  {
    background-color: var(--nav-color);
}

.toggle-icon {
    display: none;
}


/* MODAL */
.modal {
    position: fixed;
    transform: translate(-50%, -50%);
    left: 50%;
    top: 50%;
    border: none;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 2px 4px rgba(0, 0, 0, 0.6);
    padding: 0;
    border-radius: 8px;
    
}

.dialog-content {
    padding: 32px;
    background-color: #f1a782;
}

#loginDialog::backdrop {
    background-color: rgba(0, 0, 0, 0.4);
    backdrop-filter: blur(2px);
}

/* BUTTONS */
.btn {
    padding: 4px 16px;
    background-color: #e4d6a6;
    border: none;
    border-radius: 6px;
    font-size: 1.8rem;
    font-weight: 500;
}

.btn-login {
    background-color: #ffffff;
}

.btn:hover {
    background-color: #e26d5c;
    color: #ffffff;
    transition: .3s;
    cursor: pointer;
}

.btn-neg:hover {
    background-color: #000;   
}

.btn-login:hover {
    background-color: #f1a782;
}


/* IMAGES */




/* FLEX CONTROLS */

.flex {
    display: flex;
}

.fcenter {
    justify-content: center;
}

.gap {
    gap: 12px;
}

.responsive-flex {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;
}

/* SPACING CONTROLS */
.t12 {
    margin-top: 12px;
}
.t16 {
    margin-top: 16px;
}
.m120auto {
    margin: 120px auto 0 auto;
}
.m80auto {
    margin: 80px auto;
}
.m60auto {
    margin: 60px auto 32px auto;
}
.m12auto {
    margin: 12px auto;
}
.v2h4 {
    margin: 2px 4px;
}
.fixedl1 {
    width: 60px;
}
.fixedl2 {
    width: 120px;
}

/* SEARCH CONTROLS */
.p-intro {
    font-size: 1.8rem;
}
.search-wrapper {
    margin-top: 16px;
    display: flex;
    /* gap: 6px; */
    align-items: center;
    width: 100%;
}
.search-text {
    width: 140px;
    text-align: center;
    font-size: 1.8rem;
    background-color: #e26d5c;
    padding: 4px 0;
}
.search-icon {
    width: 40px;
    height: 32.5px;
    padding-top: 6px;
    font-size: 20px;
    text-align: center;
    background-color: #e26d5c;
}
.search-container {
    width: 100%;
    position: relative;
}
.search-class {
    margin: auto;
    width: 100%;
    padding: 6px;
    background-color: rgba(247, 243, 228, 0.5);
    border: var(--border-black);
    /* border-radius: 6px; */
    font-size: 1.4rem;
    font-weight: 300;
}
#searchResults {
    position: absolute;
    top: 100%;
    z-index: 100;
    width: 100%;
    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
    background-color: #fdf1d8;

}
#searchResults li {
    padding: 6px 8px;
    list-style: none;
    color: #000;
    width: 100%;
    transition: .1s;
}
#searchResults li:last-of-type {
    margin-bottom: 16px;
}
#searchResults a {
    padding-left: 4px;
    text-decoration: none;
    width: 100%;
    color: #000;
    transition: .1s;
}
#searchResults li:hover {
    background-color: #e26d5c;
    cursor: pointer;
    transition: .1s;
}
#searchResults li:hover a {
    background-color: #e26d5c;
    cursor: pointer;
    transition: .1s;
}

/* CAROUSELS */
.carousel-container {
    max-width: 800px;
    width: 70%;
    height: fit-content;
    /* margin: auto; */
    /* border: 1px solid #ffffff; */
}
.carousel-img-container {
    max-width: inherit;
    width: 100%;
}

.carousel-img-container .carousel-view {
    margin-top: 40px;
}

.carousel-view {
    position: relative;
    /* border: 2px solid #5e5f8f; */
}

.carousel-item-list {
    display: flex;
    gap: 48px;
    scroll-behavior: smooth;
    overflow: auto;
    /* scroll-snap-type: x mandatory; */
    /* border: 1px solid #000; */
}

.carousel-item, .carousel-img-item {
    position: relative;
    flex: none;
    scroll-snap-align: start;
    width: 200px;
    height: auto;
    /* background-color: #2f0b52; */
    z-index: 4;
}
.carousel-img-item {
    width: auto;
}

.poster-img {
    width: 100%;
}

.carousel-item-p {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: transparent;
    font-size: 2rem;
    text-align: center;
    background-color: rgba(24, 24, 24, 0);
    padding: 10px;
    transition: all .3s ease-in-out;
}
.carousel-item .carousel-item-p .fa-star {
    color: transparent;
    transition: all .3s ease-in-out;
}

.carousel-item:hover .carousel-item-p {
    color: #fff;
    background-color: rgba(24, 24, 24, 0.7);
    transition: all .3s ease-in-out;
}
.carousel-item:hover .fa-star {
    color: #e26d5c;
    transition: all .3s ease-in-out;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.carousel-item-list::-webkit-scrollbar {
    display: none;
  }
/* Hide scrollbar for IE, Edge and Firefox */
.carousel-item-list {
-ms-overflow-style: none;  /* IE and Edge */
scrollbar-width: none;  /* Firefox */
}

.btn-control {
    position: absolute;
    top: 50%;
    /* border: 1px solid #000; */
    background-color: rgba(47, 43, 43, 0.3);
    /* padding: 5px 10px; */
    /* opacity: .5; */
    transform: translateY(-50%);
    z-index: 7;
}
.btn-control .fa-angle-right, .btn-control .fa-angle-left {
    background-color: rgba(47, 43, 43, 0.3);
    padding: 5px 10px;
    font-size: 24px;
    /* border: 3px solid #ffffff; */
}
.btn-control > i {
    color: #fff;
}
.prev-btn {
    left: 4px;
}
.next-btn {
    right: 4px;
}
.btn-control:hover {
    background-color: rgba(7, 7, 7, 0.7);
    transition: .3s;
    cursor: pointer;
}

/* INDEX CSS */
h1 {
    margin: 18px 0;
}

.compare-container {
    display: flex;
    justify-content: space-around;
}
/* ... */

